# Smart-Car-Washing-System-IoT

./: .gitignore  README.md
Arduino/Smart car washing system IoT/: platformio.ini
Arduino/Smart car washing system IoT/src/: CarWasher.h  config.h  main.cpp
Arduino/Smart car washing system IoT/src/actuators/: Display.h  Lcd.cpp  Lcd.h  Led.cpp  Led.h  ServoMotorImpl.cpp  ServoMotorImpl.h
Arduino/Smart car washing system IoT/src/sensors/: Button.h  ButtonImpl.cpp  ButtonImpl.h  Pir.cpp  Pir.h  PresenceDetector.h  Sonar.cpp  Sonar.h  proximitySensor.h  tempSensor.h  tempSensor36.cpp  tempSensor36.h  tempSensor36GZ.cpp  tempSensor36GZ.h  tempSensorImpl.h
Arduino/Smart car washing system IoT/src/system/: logger.cpp  logger.h  scheduler.cpp  scheduler.h  task.h  taskWithState.h
Arduino/Smart car washing system IoT/src/task/: CheckInPresenceDetection.cpp  checkInPresenceDetection.h  communicator.cpp  communicator.h  displayFeedback.cpp  displayFeedback.h  manageAccess.cpp  manageAccess.h  manageTemperature.cpp  manageTemperature.h  scenarioUpdater.cpp  scenarioUpdater.h  sleepTask.cpp  sleepTask.h  washer.cpp  washer.h  washingAreaPresenceDetection.cpp  (+1 more)
Rust/smart_car_washing_app/: .gitignore  Cargo.toml
Rust/smart_car_washing_app/.github/workflows/: pages.yml
Rust/smart_car_washing_app/src/: app.rs  communicator.rs  main.rs
SmartCarWashIcon/: SCWCover.ai  SmartCarWash.ai  bar.ai  car.ai  water.ai
doc/report/: SmartCarWash.tex
doc/report/sections/: 00_cover_page.tex  01_body.tex  01_introduction.tex
doc/report/settings/: initial.tex
