[package]
name = "smart_car_washing_app"
version = "0.1.1"



[dependencies]
egui = "0.23.0"
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

env_logger = "0.10"
serialport = "4.2.2"
egui_gauge = "0.1.2"
json = "0.12.4"
image = "0.24.7"

[dependencies.eframe]
version = "0.23.0"
default-features = false
features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
]


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
